--- a/views/loginForm.ejs
+++ b/views/loginForm.ejs
@@ -41,6 +41,8 @@
                 <div>
                     <button type="submit" form="loginForm" class="btn btn-info btn-sm">Continuar</button>
                     <button type="reset" form="loginForm" class="btn btn-info btn-sm">Limpiar</button>
+                    <!-- Boton para Volver -->
+                    <button type="button" class="btn btn-info btn-sm" onclick="history.back()">Volver</button>
                 </div>
             </div>
         </div>        
