--- a/views/registerForm.ejs
+++ b/views/registerForm.ejs
@@ -73,6 +73,8 @@
                 <div class="button-group">
                     <button type="submit" form="registerForm" class="btn btn-info btn-sm">Guardar</button>
                     <button type="reset" form="registerForm" class="btn btn-info btn-sm edit-button">Limpiar</button>
+                    <!-- Boton para Volver -->
+                    <button type="button" class="btn btn-info btn-sm edit-button" onclick="history.back()">Volver</button>
                 </div>
             </div>
         </div>
